# pyperclip

./: AUTHORS.txt  MANIFEST.in  Pipfile  pyproject.toml  setup.py  tox.ini
src/pyperclip/: __init__.py
tests/: test_pyperclip.py
