[build-system]
requires = ["setuptools"]
build-backend = "setuptools"

[tool.poetry]
name = "pyperclip"
version = "1.8.21"
description = ""
authors = [""]
license = "Apache License 2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/KuantumBS/pyperclip/"
documentation = ""
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
packages = [{ include = "pyperclip", from = "src" }]
include = ["*.out", "*.yml"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
ipython = "^8.10.0"

[tool.poetry.group.tests]
optional = true
